# ibms

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.admin  README.md  gunicorn.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: multi-build-admin.yaml  multi-build.yaml  multi-build.yml  run-tests.yml  secret-scan.yml  security-msdo-defender.yml
docs/: move-financialyear-to-ibms.md
ibms/: admin.py  forms.py  models.py  reports.py  tasks.py  test_admin.py  test_forms.py  test_models.py  test_utils.py  test_views.py  tests.py  urls.py  utils.py  views.py
ibms/migrations/: 0027_add_financialyear.py  0028_retarget_financialyear_fks.py  0029_rename_financialyear_table.py  0030_rename_camelcase_fields.py
ibms/static/js/: code_update_create.js
ibms/templates/ibms/: code_update_admin.html  download.html  (+2 more)
ibms/test_data/: corporatestrategy_upload_test.csv  dept_program_upload_test.csv  erservicepriority_upload_test.csv  generalservicepriority_upload_test.csv  ncservicepriority_upload_test.csv  ncstrategicplan_upload_test.csv  pvsservicepriority_upload_test.csv  serviceprioritymapping_upload_test.csv  sfmservicepriority_upload_test.csv
ibms_project/: settings.py  urls.py
ibms_project/ibms/: forms.py  test_views.py  tests.py  views.py
ibms_project/sfm/: tests.py
ibms_project/templates/: base_ibms.html
kustomize/base/: deployment.yaml  kustomization.yaml  task_worker.yaml
sfm/: admin.py  forms.py  models.py  report.py  tests.py  utils.py
sfm/migrations/: 0010_remove_financialyear.py  0011_retarget_financialyear_fks.py
(+6 files in other folders)
